syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.dev.optimus.duat.protobuf";
option go_package = "duat/pb";
option objc_class_prefix = "HLW";

package duat;

message DocumentTypeReply {
    uint64 id = 1;
    string name = 2;
    uint64 created_at = 3;
    uint64 updated_at = 4;
    optional uint64 deleted_at = 5;
}

message DocumentTypeListReply {
    repeated DocumentTypeReply list = 1;
}